# PickaCord

./: .dockerignore  Cargo.toml  Dockerfile  README.md  build.gradle.kts  docker-compose.yml  libs.versions.toml  settings.gradle.kts
.github/workflows/: publish.yml  rust.yml
src/: main.rs
src/commands/: ask.rs  ip.rs  mod.rs  not_found.rs  ping.rs
src/main/kotlin/: Main.kt
src/main/kotlin/fr/pickaria/bot/: Main.kt
src/main/kotlin/fr/pickaria/bot/extensions/: IpExtension.kt  PingExtension.kt
